Persistence interactions finished;

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Space Enemies</string>
+    <string name="app_shared_preferences">SharedPreferences</string>
 </resources>
